[gd_scene load_steps=26 format=3 uid="uid://dlo1nlqynryso"]

[ext_resource type="Texture2D" uid="uid://rvx086akqwj1" path="res://assets/game/characters/monsters.png" id="1_siti5"]
[ext_resource type="Script" uid="uid://c5gmfinumygu4" path="res://scripts/game/components/hurtbox_component.gd" id="2_lklkc"]
[ext_resource type="Script" uid="uid://ch8r0xsbtuj63" path="res://scripts/game/components/health_component.gd" id="3_fof2v"]
[ext_resource type="Script" uid="uid://b6ojek6ypaial" path="res://scripts/game/state_machine/node_state_machine.gd" id="4_ifebp"]
[ext_resource type="Script" uid="uid://dn8j86oahck5w" path="res://scenes/characters/enemy/spawn_state.gd" id="4_spawn"]
[ext_resource type="Script" uid="uid://cqq8dehx4mn2a" path="res://scenes/characters/enemy/idle_state.gd" id="5_1mn2y"]
[ext_resource type="Script" uid="uid://y1xtoh3og51s" path="res://scenes/characters/enemy/hurt_state.gd" id="6_61nds"]
[ext_resource type="Script" uid="uid://bqgniqxnc4snp" path="res://scenes/characters/enemy/chase_state.gd" id="7_1mn2y"]
[ext_resource type="Script" uid="uid://cu8mashyovlri" path="res://scenes/characters/enemy/death_state.gd" id="7_igrhf"]
[ext_resource type="Script" uid="uid://13ftg7c0uyf3" path="res://scenes/characters/enemy/attack_state.gd" id="8_attack"]
[ext_resource type="Script" uid="uid://blt8qxujohwor" path="res://scripts/game/components/enemy_sense_component.gd" id="9_61nds"]
[ext_resource type="Script" uid="uid://dphatmavxn3u8" path="res://scripts/game/components/pathfinding_component.gd" id="10_df3bm"]
[ext_resource type="Script" uid="uid://c7bsngihe1vew" path="res://scripts/game/components/movement_component.gd" id="11_vdd08"]
[ext_resource type="Script" uid="uid://850sk6q2ppie" path="res://scripts/game/components/animation/wobble_animation_component.gd" id="12_wobble"]
[ext_resource type="Script" uid="uid://bstid0r2r8cgw" path="res://scripts/game/components/animation/death_animation_component.gd" id="13_death"]
[ext_resource type="Script" uid="uid://ba1quthmdt5jv" path="res://scripts/game/components/animation/attack_animation_component.gd" id="14_attack_anim"]
[ext_resource type="Script" uid="uid://br3qhxoutyjgg" path="res://scripts/game/components/animation/spawn_animation_component.gd" id="15_spawn_anim"]
[ext_resource type="Script" uid="uid://echlin1jyex0" path="res://scripts/game/components/animation/hurt_stagger_animation_component.gd" id="16_cuj74"]
[ext_resource type="Script" uid="uid://bcayodtipc5tk" path="res://scripts/game/components/separation_component.gd" id="17_separation"]
[ext_resource type="Script" uid="uid://b35kv6kb2iivw" path="res://scripts/game/components/damage_number_component.gd" id="18_damage_number"]
[ext_resource type="Script" uid="uid://ddick5omjoqrp" path="res://scripts/game/components/animation/fade_animation_component.gd" id="19_fade_anim"]
[ext_resource type="Script" uid="uid://dmg7rn14v6nv0" path="res://scripts/game/components/drop_component.gd" id="20_drop"]
[ext_resource type="PackedScene" uid="uid://cn74jcjtvrdmu" path="res://scenes/objects/coin.tscn" id="21_coin"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vdd08"]
radius = 11.0
height = 36.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0ap80"]
radius = 8.39344

[node name="SkeletonSoldier" type="CharacterBody2D"]
position = Vector2(0, 2)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0)
shape = SubResource("CapsuleShape2D_vdd08")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1, 0)
texture = ExtResource("1_siti5")
region_enabled = true
region_rect = Rect2(0, 128, 32, 32)

[node name="HurtboxComponent" type="Area2D" parent="Sprite2D" node_paths=PackedStringArray("health_component")]
collision_layer = 32
collision_mask = 4
script = ExtResource("2_lklkc")
health_component = NodePath("../../HealthComponent")
metadata/_custom_type_script = "uid://c5gmfinumygu4"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/HurtboxComponent"]
position = Vector2(-3.14754, 0)
scale = Vector2(1.14136, 1.13235)
shape = SubResource("CapsuleShape2D_0ap80")
debug_color = Color(0.931449, 0.24244, 0.260464, 0.42)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_node_state")]
script = ExtResource("4_ifebp")
initial_node_state = NodePath("Spawn")

[node name="Spawn" type="Node" parent="StateMachine" node_paths=PackedStringArray("spawn_animation")]
script = ExtResource("4_spawn")
spawn_animation = NodePath("../../SpawnAnimationComponent")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("hurtbox", "sense", "health")]
script = ExtResource("5_1mn2y")
hurtbox = NodePath("../../Sprite2D/HurtboxComponent")
sense = NodePath("../../EnemySenseComponent")
health = NodePath("../../HealthComponent")

[node name="Hurt" type="Node" parent="StateMachine" node_paths=PackedStringArray("hurt_animation")]
script = ExtResource("6_61nds")
hurt_animation = NodePath("../../HurtStaggerAnimationComponent")

[node name="Chase" type="Node" parent="StateMachine" node_paths=PackedStringArray("movement", "pathfinding", "sense", "hurtbox", "health", "wobble_animation", "separation")]
script = ExtResource("7_1mn2y")
movement = NodePath("../../MovementComponent")
pathfinding = NodePath("../../PathfindingComponent")
sense = NodePath("../../EnemySenseComponent")
hurtbox = NodePath("../../Sprite2D/HurtboxComponent")
health = NodePath("../../HealthComponent")
wobble_animation = NodePath("../../WobbleAnimationComponent")
separation = NodePath("../../SeparationComponent")

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("movement", "pathfinding", "sense", "hurtbox", "health", "attack_animation")]
script = ExtResource("8_attack")
movement = NodePath("../../MovementComponent")
pathfinding = NodePath("../../PathfindingComponent")
sense = NodePath("../../EnemySenseComponent")
hurtbox = NodePath("../../Sprite2D/HurtboxComponent")
health = NodePath("../../HealthComponent")
attack_animation = NodePath("../../AttackAnimationComponent")

[node name="Death" type="Node" parent="StateMachine" node_paths=PackedStringArray("collision_shapes", "death_animation")]
script = ExtResource("7_igrhf")
collision_shapes = [NodePath("../../Sprite2D/HurtboxComponent/CollisionShape2D"), NodePath("../../CollisionShape2D")]
death_animation = NodePath("../../DeathAnimationComponent")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 3.0
target_desired_distance = 30.0
path_postprocessing = 1

[node name="EnemySenseComponent" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource("9_61nds")
detection_radius = 500.0
metadata/_custom_type_script = "uid://blt8qxujohwor"

[node name="PathfindingComponent" type="Node" parent="." node_paths=PackedStringArray("agent")]
script = ExtResource("10_df3bm")
agent = NodePath("../NavigationAgent2D")
metadata/_custom_type_script = "uid://dphatmavxn3u8"

[node name="MovementComponent" type="Node" parent="." node_paths=PackedStringArray("character_body")]
script = ExtResource("11_vdd08")
character_body = NodePath("..")
move_speed = 25.0
metadata/_custom_type_script = "uid://c7bsngihe1vew"

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_fof2v")
max_health = 15
metadata/_custom_type_script = "uid://ch8r0xsbtuj63"

[node name="WobbleAnimationComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("12_wobble")
sprite = NodePath("../Sprite2D")

[node name="DeathAnimationComponent" type="Node" parent="." node_paths=PackedStringArray("sprite", "body")]
script = ExtResource("13_death")
sprite = NodePath("../Sprite2D")
body = NodePath("..")

[node name="AttackAnimationComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("14_attack_anim")
sprite = NodePath("../Sprite2D")

[node name="SpawnAnimationComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("15_spawn_anim")
sprite = NodePath("../Sprite2D")
spawn_duration = 2.0

[node name="HurtStaggerAnimationComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("16_cuj74")
sprite = NodePath("../Sprite2D")
metadata/_custom_type_script = "uid://echlin1jyex0"

[node name="SeparationComponent" type="Node" parent="."]
script = ExtResource("17_separation")

[node name="FadeAnimationComponent" type="Node" parent="."]
script = ExtResource("19_fade_anim")

[node name="DamageNumberComponent" type="Node2D" parent="." node_paths=PackedStringArray("hurtbox_component", "fade_animation_component")]
script = ExtResource("18_damage_number")
hurtbox_component = NodePath("../Sprite2D/HurtboxComponent")
fade_animation_component = NodePath("../FadeAnimationComponent")
font_size = 12

[node name="DropComponent" type="Node" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("20_drop")
health_component = NodePath("../HealthComponent")
drop_scene = ExtResource("21_coin")
drop_chance = 0.7
max_drops = 2
spread_radius = 25.0
